fix bug by ignoring whitespace in parent xml node

--- a/sass/android_inflate.scss
+++ b/sass/android_inflate.scss
@@ -9,7 +9,7 @@ h1{
 	font-size: 3.157em;
 }
 form{
-
+	text-align: left;
 }
 textarea{
 	font-family: Monaco, Consolas, Inconsolata, "Droid Sans Mono", Menlo, Courier, monospace;
